--- a/4월 2주차/4월 10일.MD
+++ b/4월 2주차/4월 10일.MD
@@ -254,3 +254,422 @@
 </body>
 </html>
 ```
+
+---------------------------
+
+# 한것들
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	for(i=1;i<10;i++) {
+		for(j=1;j<10;j++) {
+
+			if(i==1 &&j==1) {
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+
+			if(i!=1 &&j==1) {
+				document.write("<br>")
+				document.write("<br>")
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+			document.write(i+"*"+j+"="+(i*j)+"<br>")
+			
+
+			
+
+
+		}
+	}
+
+</script>
+
+<style>
+
+	body {
+		background-image: url("./image/apple.png");
+		background-size: 500px 500px;
+	}
+
+</style>
+
+</head>
+<body>
+
+</body>
+</html>
+```
+
+# 2
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	for(i=1;i<10;i++) {
+		for(j=1;j<10;j++) {
+
+			if(i==1 &&j==1) {
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+
+			if(i!=1 &&j==1) {
+				document.write("<br>")
+				document.write("<br>")
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+			document.write(i+"*"+j+"="+(i*j)+"<br>")
+			
+
+			
+
+
+		}
+	}
+
+</script>
+
+<style>
+
+	body {
+		background-image: url("./image/apple.png");
+		background-size: 500px 500px;
+	}
+
+</style>
+
+</head>
+<body>
+
+</body>
+</html>
+```
+
+# 3
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	// "<p style=font-size:"+i+"pt>"+ i +"px </p>"
+
+/* 	for(var i=10;i<51;i+=5) {
+
+		document.write("<span style=font-size:"+i+"pt>"+ i +"px </span>");
+	} */
+
+	//document.write("<h3 style='color:"+COLOR_RED+"'>컬러상수적용</h3>");
+
+	for(var i=5;i>0;i--) {
+		//document.write("<p><h"+i+">h"+i+"</h"+i+"></p>");
+
+		if(i==5) {
+			document.write("<p><h5 stlye='color:red'>&lth5&gt;교시</h5></p>")
+		}
+		else if(i==4) {
+			document.write("<p><h4>&lth5&gt;교시</h4></p>")
+		}
+		else if(i==3) {
+			document.write("<p><h3>&lth5&gt;교시</h3></p>")
+		}
+		else if(i==2) {
+			document.write("<p><h2>&lth5&gt;교시</h2></p>")
+		}
+		else if(i==1) {
+			document.write("<p><h1>&lth5&gt;교시</h1></p>")
+		}
+
+	}
+
+</script>
+
+<style>
+	h5 {
+		opacity: 0.2;
+		color: red;
+	}
+
+	h4 {
+		opacity: 0.4;
+		color: blue;
+	}
+
+	h3 {
+		opacity: 0.6;
+		color: yellow;
+	}
+
+	h2 {
+		opacity: 0.8;
+		color: lightblue;
+	}
+
+	h1 {
+		opacity: 1;
+		color: gray;
+	}
+	
+</style>
+
+</head>
+<body>
+</body>
+</html>
+```
+
+# 4
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	// "오늘은  <span style='color:yello;'>"
+
+	for(var i=10;i<51;i+=5) {
+
+		document.write("<span style=font-size:"+i+"pt>"+ i +"px </span>");
+	}
+
+</script>
+
+<style>
+	span {
+	}
+</style>
+</head>
+<body>
+
+</body>
+</html>
+```
+
+# 5
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	// 과일을 선택합니다(바나나200/사과300/체리400)
+	// switch문으로 과일의 가격(price)를 결정합니다.
+	// <h4>선택하신 000 과일의 가격은 000 입니다.</h4>
+
+	// div안에
+	// 바나나면 바나나 이미지를
+	// 사과면 사과 이미지를
+	// 체리면 체리 이미지를 출력해 줍니다.
+
+	fruit = prompt("과일을 선택해 주세요. ex)바나나200/사과300/제리400");
+
+	switch(fruit) {
+		case "바나나200" :
+			document.write("<div><img src='./image/apple.png'>선택하신 바나나 과일의 가격은 200 입니다</div>")
+	}
+	
+
+
+</script>
+
+<style>
+
+	body {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		min-height: 100vh;
+	}
+
+	div {
+		width: 300px;
+		height: 300px;
+	}
+
+	div>img {
+		width: 300px;
+		height: 300px;
+	}
+
+</style>
+
+</head>
+<body>
+
+</body>
+</html>
+```
+
+# 6
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	for(i=1;i<10;i++) {
+		for(j=1;j<10;j++) {
+
+			if(i==1 &&j==1) {
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+
+			if(i!=1 &&j==1) {
+				document.write("<br>")
+				document.write("<br>")
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+			document.write(i+"*"+j+"="+(i*j)+"<br>")
+			
+
+			
+
+
+		}
+	}
+
+</script>
+
+<style>
+
+	body {
+		background-image: url("./image/apple.png");
+		background-size: 500px 500px;
+	}
+
+</style>
+
+</head>
+<body>
+
+</body>
+</html>
+```
+
+# 7
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	for(i=1;i<10;i++) {
+		for(j=1;j<10;j++) {
+
+			if(i==1 &&j==1) {
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+
+			if(i!=1 &&j==1) {
+				document.write("<br>")
+				document.write("<br>")
+				document.write(i+"단")
+				document.write("<hr>")
+			}
+			document.write(i+"*"+j+"="+(i*j)+"<br>")
+			
+
+			
+
+
+		}
+	}
+
+</script>
+
+<style>
+
+	body {
+		background-image: url("./image/apple.png");
+		background-size: 500px 500px;
+	}
+
+</style>
+
+</head>
+<body>
+
+</body>
+</html>
+```
+
+# 8
+```html
+<!DOCTYPE html>
+<!-- 
+
+	조건문
+		if() {}			inf(){
+
+		if() {}			}else if(){
+
+		if() {}			}else{
+
+						}
+
+		switch() {
+			case: break;
+			case: break;
+			default;
+		}
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+
+	
+
+	// 정수값을 입력받는다.
+	// if문을 활용해서 짝수이면 <h3> 입력하신 숫자는  number입니다</h3>
+	// 이때... 이미지는 100*100사이즈로 A이미지를 출력
+	// 홀수는  <h3> 입력하신 숫자는  number입니다</h3>
+	// 이때... 이미지는 100*100사이즈로 B이미지를 출력
+
+	var a = prompt("숫자를 입력해주세요.");	
+
+	if(a%2==0) {
+		document.write("입력하신 숫자는 "+a+" 입니다.");
+		document.write("<img src='./image/cat2.jpg' width='100px' height ='100px'>");
+	} else if(a%2!=0) {
+		document.write("입력하신 숫자는 "+a+" 입니다.");
+		document.write("<img src='./image/cat3.jpg' width='100px' height ='100px'>");
+	}
+
+
+</script>
+</head>
+<body>
+
+</body>
+</html>
+```
