--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -1,18 +1,113 @@
 # Review
-- 실습과제
+Script 작성법
+- js 파일작성후 script src=""로 가져온다
+- head 작성
+- body 작성
+- 이벤트리스너
+- href="javascript:코드
 
+변수 : var let const 가 있다.
+
+연산자: 자바와 동일하지만... ===, !== 이것이 추가로 있다.
+
+조건 반복문 동일
 
 -----------------------------------------------------------------------------------------------
 
 # JS 시작
 
 ## 오늘의 학습목표
-- 학습내용 :
-***JavaScript***에 개요 및 기본을 익힌다.
-- 스크립트 개요
-- 스크립트 작성법과 작성위치
-- 입출력 함수
-- 식별자와 변수
-- 데이터 타입
-- 연산자
-- 조건문과 반복문
+- 조건/반복문 for in, for of 및 실습
+- 함수
+- Object와 String객체
+
+## 포트폴리오 페이지 작성 매일하기
+
+## 오늘 이론들
+```html
+<!-- 
+	for in
+	for of
+ -->
+
+<!-- 
+	함수
+		. 함수, 메서드라 한다.
+		. 특정 작업을 여러번 반복하는 경우 재사용 가능한 구조로 만들어 놓은 코드블록
+
+
+	1. 함수선언식
+			- 선언/정의
+				function 함수명(파라미터, 파라미터,,,) {
+					실행코드;
+					실행코드;
+						~
+					return 반환값;
+				}
+
+			- 호출
+				함수명(값,값,,)
+
+	2. 함수표현식
+			- 선언
+				let f = function(파라미터,파라미터) {
+
+				}
+			
+			- 호출
+				f(값,값,,)
+ -->
+
+
+```
+
+
+### JS function 활용
+```html
+<!DOCTYPE html>
+
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	div{
+		width: 500px;
+		height: 500px;
+		border: 1px solid black;
+		background: skyblue;
+	}
+
+	p{
+		font-size: 20px;
+		font-weight: bolder;
+		text-align: center;
+		color: black;
+	}
+	a:hover{
+		cursor: pointer;
+		color: yellow;
+		font-weight: 900;
+	}
+	h1{
+		text-align: center;
+	}
+
+</style>
+<script>
+	function greet(){
+		document.write("<h1>환영합니다<h1>");
+			
+	}
+</script>
+</head>
+<body>
+	<div>
+		<p><script>greet()</script></p>
+		<hr>
+		<p>저희 홈페이지에 오신것을 환영합니다.<script>greet()</script></p>
+		<a onclick="greet()">☞여기를 눌러주세요</a>
+	</div>
+</body>
+</html>
+```
