--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -111,3 +111,30 @@ Script 작성법
 </body>
 </html>
 ```
+
+### js 호이스팅
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	// 호이스팅
+	document.write(adder(30,40));
+	document.write("<br>");
+
+	function adder(a,b) {
+		let sum;
+		sum = a+b;
+		return sum;
+	}
+
+	document.write(adder(10,20));
+
+</script>
+</head>
+<body>
+</body>
+</html>
+```
