--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -58,6 +58,18 @@ Script 작성법
 				f(값,값,,)
  -->
 
+<!-- 
+	내장함수(전역함수)
+		. alert()	:	경고, 출력
+		. confirm()	:	진행할지, 종료할지 확인.. ok true
+		. prompt()	:	문자열 입력
+		. parseInt():	문자를 정수로
+		. parseFloat(): 문자를 실수로
+		. eval()	:	수식형태의 문자열을 계산 (실수반환)
+		. isNaN()	:	숫자면 false, 문자면 true
+		. isFinite():	
+ -->
+
 
 ```
 
