--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -76,6 +76,29 @@ Script 작성법
 		- ... 파라미터 >> 배열
  -->
 
+<!-- 
+	화살표 함수
+		. 함수 선언식
+		. 함수 표현식
+		+ 화살표 함수
+	
+	화살표 함수
+		function hello(name){
+			return "hello~ " + name;
+		}
+
+		const hello = (name)=>{
+			return "hello~ " + name;
+		}
+
+		* 실행문이 하나이면 {} 생략가능
+		 const hello = (name) => "hello~ " + name;
+
+		* 매개변수가 하나라면
+		 const hello = name => "hello~ " + name;
+
+ -->
+
 ```
 
 
