--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -99,6 +99,26 @@ Script 작성법
 
  -->
 
+// 함수선언식
+	function hello1(name){
+		return "<h3> Hello~"+name+"</h3>"
+	}
+
+	// 함수 표현식
+	const hello2 = function(name){
+		return "<h3>Hello~"+name+"</h3>";
+	}
+
+	const hello3 = (name)=>{
+		return "<h3>Hello~"+name+"</h3>";
+	}
+
+	const hello4 = name => {
+		return "<h3>Hello~"+name+"</h3>";
+	}
+
+	const hello5 = name => "<h3>Hello~"+name+"</h3>";
+
 ```
 
 
