--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -119,6 +119,12 @@ Script 작성법
 
 	const hello5 = name => "<h3>Hello~"+name+"</h3>";
 
+<!-- 
+	템플릿 문자열
+		console.log("문자열"+변수+"문자열");
+		> console.log('문자열${변수}문자열');
+ -->
+
 ```
 
 
