--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -204,3 +204,47 @@ Script 작성법
 </body>
 </html>
 ```
+
+
+### 요모조모 js
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	document.write("<h1>암호를 입력하라!</h1><hr>")
+
+	count = 3;
+
+	result = prompt("암호를 입력해주세요 기회 ("+count+"/3)")
+
+	if(result=="정답") {
+		document.write("암호를 맞췄습니다.");
+	} else {
+		while(true) {
+
+			count--;;
+
+			if(count == 0) {
+				document.write("기회를 모두 잃었습니다.");
+				break;
+			}
+			reply = prompt("암호를 재입력해주세요 기회 ("+count+"/3)");
+
+			if(reply == "정답") {
+				document.write("암호를 맞췄습니다.");
+				break;
+			}
+		}
+	}
+</script>
+
+</head>
+<body>
+
+</body>
+</html>
+```
