--- a/4월 2주차/4월 11일.MD
+++ b/4월 2주차/4월 11일.MD
@@ -125,10 +125,59 @@ Script 작성법
 		> console.log('문자열${변수}문자열');
  -->
 
+<!-- 
+	String 객체
+		. 가장 많이 사용되는 데이터로 매우 중요하다.
+		. 문자열을 다루기 위한 객체이다.
+
+		. 생성
+			let str = new String(문자열) > 문자열객체생성
+			let str = "문자열"
+		. 특징
+			- 생성된 객체는
+
+ -->
+
+<!-- 
+	String 객체
+		. 가장 많이 사용되는 데이터로 매우 중요하다.
+		. 문자열을 다루기 위한 객체이다.
+
+		. 생성
+			let str = new String(문자열) > 문자열객체생성
+			let str = "문자열"
+		. 특징
+			- 생성된 객체는(문자열)은 원본수정이 불가능하다.
+			- length프로퍼티로 길이를 알 수 있다.
+			- [인덱스] 연산자로 문자에 접근할 수 있다.
+					  안	  녕	  하	  세	  요
+					[0]	[1]	[2]	[3]	[4]
+
+			. 주요한 메서드들
+				- charAt(index) : index에 있는 문자 리턴
+				- concat(str1,str2,,) : 문자열 결합
+				- indexOf(찾는문자): 찾는 문자가 처음으로 나타나는 인덱스
+				- lastIndexOf(찾는문자): 찾는 문자가 제일 마지막에 있는 인덱스 리턴
+				- replace(str1,str2) : str1을 str2로 대체
+
+				- slice(index1, index2) : index1부터 index2-1까지 문자열 리턴
+											(인덱스 - 음수허용)
+				- substring(index1, index2) : slice와 동일, 음수 불허
+				- substr(index1,length) : slice와 유사하지만... index1부터 length 길이만큼
+
+				- split(문자열,구분자) : 구분자를 기준으로 문자열을 분리
+				- trim() : 양쪽 공백문자 제거
+				- toLowerCase(), toUpperCase()
+				- startWidth(), endwidth() : ~~로 시작하는, ~~로 끝나는
+				- 날짜.padStart(3) : 1,2,3,4,,,, 01,02,03
+				- padEnd(2)
+ -->
+
 ```
 
+--------------------------------------------------------------------------------------------------------
 
-### JS function 활용
+# JS function 활용
 ```html
 <!DOCTYPE html>
 
