--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -1,24 +1,50 @@
 # Review
-Script 작성법
-- js 파일작성후 script src=""로 가져온다
-- head 작성
-- body 작성
-- 이벤트리스너
-- href="javascript:코드
+반복문
+- for in , for of
 
-변수 : var let const 가 있다.
+함수
+- 함수선언식
+- 함수표현식
+- 화살표함수
+- Rest파라미터(...args)
+- 템플릿 문자열 : ${변수} 문자열
 
-연산자: 자바와 동일하지만... ===, !== 이것이 추가로 있다.
-
-조건 반복문 동일
-
+String 객체
 -----------------------------------------------------------------------------------------------
 
 # JS 시작
 
 ## 오늘의 학습목표
-- 조건/반복문 for in, for of 및 실습
-- 함수
-- Object와 String객체
-
+- JS
 ## 포트폴리오 페이지 작성 매일하기
+
+
+# 이론들
+```html
+<!-- 
+	Array
+		. 생성방법
+			- [데이터,데이터,,]
+			- new Array() - 빈 배열을 생성해서 활용
+
+		. 	변수 = new Array();
+			변수 = new Array(배열크기);
+			변수 = new Array(데이터, 데이터,,,);
+		
+		. 특징
+				- 크기는 가변형이다. 건너뛰어서 넣을 수도 있다.
+				- [] , new Array() 둘다 객체이다.
+				- 데이터 타입에 상관없이 혼합하여 저장가능하다.
+				- 크기도 조절할 수 있다. length = 3
+				
+		. concat(arr) : 현재 배열에 arr의 원소들을 덧붙인다.	
+		. join("separator") : separator를 연결자로 해서 배열요소를
+							  하나의 문자열로 만들어 리턴
+		. slice(Index, eIndex) : s~e사이의 배열을 리턴해준다.
+		. sort() / reverse()
+		. toString() : 모든 원소들을 하나의 문자열로 만들어서 리턴(,)
+		. pop()
+		. push()
+		. shift()
+ -->
+```
