--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -48,3 +48,66 @@ String 객체
 		. shift()
  -->
 ```
+
+### 간단 js배열
+```html
+<!DOCTYPE html>
+<!-- 
+	Array
+		. 생성방법
+			- [데이터,데이터,,]
+			- new Array() - 빈 배열을 생성해서 활용
+
+		. 	변수 = new Array();
+			변수 = new Array(배열크기);
+			변수 = new Array(데이터, 데이터,,,);
+		
+		. 특징
+				- 크기는 가변형이다. 건너뛰어서 넣을 수도 있다.
+				- [] , new Array() 둘다 객체이다.
+				- 데이터 타입에 상관없이 혼합하여 저장가능하다.
+				- 크기도 조절할 수 있다. length = 3
+				
+		. concat(arr) : 현재 배열에 arr의 원소들을 덧붙인다.	
+		. join("separator") : separator를 연결자로 해서 배열요소를
+							  하나의 문자열로 만들어 리턴
+		. slice(Index, eIndex) : s~e사이의 배열을 리턴해준다.
+		. sort() / reverse()
+		. toString() : 모든 원소들을 하나의 문자열로 만들어서 리턴(,)
+		. pop()
+		. push()
+		. shift()
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	// 배열 생성
+	let arr = new Array(3);
+	arr[0] = 10;
+	arr[1] = "JavaScript";
+	arr[2] = "Programming";
+
+	arr.push("수요일");
+	document.write(arr[3]);
+	document.write(arr.pop()+"<br>");
+
+	document.write("배열의 길이는,,, "+arr.length+"이고 <br>");
+	document.write("배열의 요소는,,, <br>");
+
+	// for(i=0;i<arr.length;i++) {
+	// 	document.write("&nbsp;&nbsp;&nbsp; arr["+i+"]="+arr[i]+"<br>);
+	// }""
+	document.write("입니다.");
+
+
+
+</script>
+</head>
+<body>
+
+</body>
+</html>
+```
