--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -47,6 +47,45 @@ String 객체
 		. push()
 		. shift()
  -->
+
+<!-- 
+	. 연관배열(associative array)
+		- 배열은 인덱스 대신에 name으로 지원하는 배열
+		- 내부적으로 Object형 객체로 변환활용 할 뿐이다.
+		- Array객체가 갖는 메소드를 지원하지 못한다.
+ -->
+
+<!-- 
+	shift() : 배열의 첫번쨰 요소를 제거하고 그 요소를 반환해 준다 (pop()반대)
+	unshift() : 배열의 맨앞에 요소를 추가하고 배열의 길이를 반환한다 (push()유사)
+ -->
+
+<!-- 
+	Date객체
+		; 사용자 시스템의 날짜와 시간을 관리해 주는 객체
+
+		. 생성방법
+			- 객체변수 = new Date();
+			- 객체변수 = new Date(년,월,일,시,분,초,밀리초);
+
+		. 매서드
+			- getFullYear() : 4자리연도 표시
+			- getMonth() : 0 ~ 11사이의 숫자로 월 표시
+			- getDate() : 한달표시 (1~31)
+			- getDay() : 요일표시(0:일, 1:월~~~6:토)
+			- getHours() : 시간(0~23)
+			- getMinutes() : 분(0~59)
+			- getSeconds() : 초(0~59)
+			- getTime() : 1970-1-1 00:00:00 부터 경과한 밀리초
+
+			- setFullYear(년도)
+			- setMonth(month)
+			- setDate(date)
+			- setHours(hour)
+			- 분,초,밀리초
+			- setTime(밀리초)
+ -->
+
 ```
 
 ### 간단 js배열
