--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -150,3 +150,46 @@ String 객체
 </body>
 </html>
 ```
+
+--------------------------------
+
+# 시간관련 문제 알고리즘 같았음 (중요)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function getInterveralDate(day){
+		// prompt로 받은 이전 또는 이후 날짜를 가지고
+		let now = new Date();
+		// 일을 밀리초로 계산
+		let dayMilliseconds = 60*60*24*1000;
+		return	new Date(now.getTime()+(dayMilliseconds*day));
+
+	}
+</script>
+</head>
+<body>
+	<h3>며칠 전후의 날짜를 계산</h3>
+	<script>
+		let intervalDate = prompt("며칠 전(-) 후(+)의 날짜를 알고싶은가요?")
+		let d = getInterveralDate(intervalDate);
+		let year = d.getFullYear();
+		let month = d.getMonth()+1;
+		let date = d.getDate();
+
+
+		document.write(year+"년"+month+"월"+date+"일");
+
+		//prompt() 몇일 전(-) 후(+)의 날짜를 알고싶은가요?
+		// getInterver를 호출해서 새로운 날짜의 객체를 리턴 받아오고
+		// 년,월,일을 출력해준다.
+		
+
+	</script>
+
+</body>
+</html>
+```
