--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -86,6 +86,21 @@ String 객체
 			- setTime(밀리초)
  -->
 
+<!-- 
+	Number객체
+		.Wrapper 객체이다.
+		. 자바스크립트는 64비트 부동소수점 방식으로 저장한다.
+		. 함수종류
+			- toString() : 숫자 > 문자
+			- toFixed() : 소수점 몇자리까지 >> 달러나 유로화를 출력할때 소수점 2자리 
+							(정수만 보여줄때)
+			- parseInt() :	>> input으로 입력받는 값을 숫자로 전환연산
+			- parseFloat() :
+
+			* padStart(3) : 000
+							월, 날짜 2023-1-1 >> 2023-01-01
+ -->
+
 ```
 
 ### 간단 js배열
@@ -189,6 +204,46 @@ String 객체
 		
 
 	</script>
+
+</body>
+</html>
+```
+
+# JS에서 생성자 만들기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	class Person {
+		constructor(a,b,c) {
+			this.a = a;
+			this.b = b;
+			this.c = c;
+		}
+
+		getA() {
+			return this.a
+		}
+
+		getB() {
+			return this.b;
+		}
+
+		getC() {
+			return this.c;
+		}
+	}
+
+	let p = new Person("홍길동",30,"서울");
+	document.write(p.a);
+
+</script>
+</head>
+<body>
 
 </body>
 </html>
