--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -101,6 +101,19 @@ String 객체
 							월, 날짜 2023-1-1 >> 2023-01-01
  -->
 
+<!-- 
+	자바스크립트의 객체
+		; 자바스크립트에서 Class도 추가되었다. 
+
+		. 코어객체 : 	내장객체 - String, Array, Math...
+						사용자객체 - new Object(), 리터럴방식, 프로토타입(생성자)로 생성
+
+		. HTML DOM(Document Object Model) 객체
+
+		. BOM(Browser Object Model) 객체
+
+ -->
+
 ```
 
 ### 간단 js배열
@@ -244,6 +257,40 @@ String 객체
 </script>
 </head>
 <body>
+
+</body>
+</html>
+```
+
+### JS에서 Object 객체 사용방법
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	// Object 객체를 활용한 객체생성방
+	let person = new Object();
+
+		person.name = "홍길동";
+		person.nickName = "X-man";
+		person.age = 24;
+		person.major = "자바스크립트";
+
+</script>
+</head>
+<body>
+	<h3>Object 객체호출</h3>
+	<script>
+		document.write("이름: "+person.name+"<br>");
+		document.write("이름: "+person.nickName+"<br>");
+		document.write("이름: "+person.age+"<br>");
+		document.write("이름: "+person.major+"<br>");
+
+
+</script>
+
 
 </body>
 </html>
