--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -295,3 +295,67 @@ String 객체
 </body>
 </html>
 ```
+
+### input 관련 js 잘 보기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	let fruits = [];
+	
+	function f1() {
+		fruits.push(frm1['fruit'].value);
+		fruits.push(frm1['price'].value);
+		fruits.push(frm1['stock'].value);
+
+		frm1['fruit'].value = '';
+  		frm1['price'].value = '';
+  		frm1['stock'].value = '';
+	}
+
+	function f2() {
+		let len = fruits.length;
+		for(var i=0;i<len;i++) {
+			document.write(fruits.pop()+",");
+		}
+	}
+
+	// 폼의 체크박스 값을 읽어서 배열에 저장하고 출력한다.
+	function f3() {
+
+	}
+
+	function f4() {
+
+	}
+
+</script>
+</head>
+<body>
+	<form name="frm1">
+		<table>
+			<tr><td>과일명</td><td><input type="text" name="fruit" value=""></td></tr>
+			<tr><td>가   격</td><td><input type="text" name="price" value=""></td></tr>
+			<tr><td>재고수량</td><td><input type="text" name="stock" value=""></td></tr>
+			<tr><td colspan="2">
+				<button type="button" onclick="f1()">입력완료</button>
+				<button type="button" onclick="f2()">입력내용</button>
+			</td></tr>
+
+		</table>
+	</form>
+
+	<hr>
+
+	<!-- frm2 check박스 사과, 배, 딸기, button 입력완료, 입력내용 -->
+
+	
+
+
+</body>
+</html>
+```
