--- a/4월 2주차/4월 12일.MD
+++ b/4월 2주차/4월 12일.MD
@@ -114,37 +114,44 @@ String 객체
 
  -->
 
+<!--
+	JSON객체
+		- 데이터를 저장하거나 전송할 때 많이 사용되는 경량의 Data 교환형식
+		- 데이터 포맷이다.
+		- 단순히 데이터를 표시하는 방법이다.
+			. 서버와 클라이언트간의 데이터 전송시 많이 사용
+			. 자바스크립트의 Object객체 표기법과 매우 유사하다.
+			. JSON.stringify(객체명)
+					- 자바스크립트의 객체를 JSON타입으로 전환
+			. JSON.parse(JSON타입데이터)
+				- JSON타입의 데이터를 자바스크립트의 객체로 전환
+			. 프로그램의 언어와 상관없이 사용할 수 있는 데이터 교환형식이다.
+			. 대부분 언어에서는 JSON데이터를 처리할 수 있는 라이브러리를 제공한다.
+
+			클라이언트 <<<	JSON형식으로 데이터	>>> 서버
+			(브라우저)
+
+			. 표기법
+				- 키와 값 쌍으로 표기한다.
+				- 키는 반드시 쌍따옴표를 붙여서 작성해야 한다.
+				- "키":"값", "키":"값",,,,,,
+
+	리터럴 표기법
+			. 중괄호를 이용해서 프로퍼티와 메서드를 한번에 작성할 수 있다.
+			. 가독성이 높다.
+			. 키를 " " 처리해도 되고 생략해도 된다.
+			. 데이터에는 값이 문자일경우 "", 숫자는 생략, 객체, 배열도 가능하다.
+			. 객체명.키로 호출하여 사용한다.
+			. 표기법
+				- 키 : "값", 키:"값",,,,,
+ -->
+
 ```
 
 ### 간단 js배열
 ```html
 <!DOCTYPE html>
-<!-- 
-	Array
-		. 생성방법
-			- [데이터,데이터,,]
-			- new Array() - 빈 배열을 생성해서 활용
 
-		. 	변수 = new Array();
-			변수 = new Array(배열크기);
-			변수 = new Array(데이터, 데이터,,,);
-		
-		. 특징
-				- 크기는 가변형이다. 건너뛰어서 넣을 수도 있다.
-				- [] , new Array() 둘다 객체이다.
-				- 데이터 타입에 상관없이 혼합하여 저장가능하다.
-				- 크기도 조절할 수 있다. length = 3
-				
-		. concat(arr) : 현재 배열에 arr의 원소들을 덧붙인다.	
-		. join("separator") : separator를 연결자로 해서 배열요소를
-							  하나의 문자열로 만들어 리턴
-		. slice(Index, eIndex) : s~e사이의 배열을 리턴해준다.
-		. sort() / reverse()
-		. toString() : 모든 원소들을 하나의 문자열로 만들어서 리턴(,)
-		. pop()
-		. push()
-		. shift()
- -->
 <html>
 <head>
 <meta charset="UTF-8">
@@ -358,4 +365,64 @@ String 객체
 
 </body>
 </html>
+```
+
+### JS 입출금 function() 도 사용
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	function deposit(money) {
+		this.balance += money;
+	}
+
+	let account = new Object();
+	account.owner = "홍길동";
+	account.code = "0001";
+	account.balance = 35000;
+	
+	// 출금하기
+	account.widthdraw = 
+		function(money) {
+			account.balance -= money;
+		}
+
+	// 조회하기
+	account.inquiry = function(){
+		return this.balance;
+	}
+
+	// 입금하기 , 오른족 함수값
+	account.deposit = deposit;
+	
+
+
+</script>
+</head>
+<body>
+	<h3>입출금하기</h3>
+	<hr>
+	<div>
+		<script>
+			document.write("예금주 : "+account.owner+"<br>");
+			document.write("통장번호 : "+account.code+"<br>");
+			document.write("잔   액 : "+account.balance+"<br>");
+
+			account.deposit(1000);
+			document.write(account.inquiry()+"<br>");
+
+			account.widthdraw(5000);
+			document.write(account.inquiry());
+		</script>
+	</div>
+
+</body>
+</html>
+
+
+
 ```
