--- a/4월 2주차/4월 13일.MD
+++ b/4월 2주차/4월 13일.MD
@@ -38,3 +38,35 @@ String 객체
 ## 오늘의 학습목표
 - JS
 ## 포트폴리오 페이지 작성 매일하기
+
+
+### JS function에서 thsi를 생략하면 전역변수로 사용가능
+```HTML
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	// 1. 생성자 함수 정의 - 함수형객체
+	function Student(name, dept, grade) {
+		this.name = name;
+		this.dept = dept;
+		this.grade = grade;
+		this.phone = "010-1234-1234";	// this를 생략하면 전역변수
+	}
+</script>
+</head>
+<body>
+	<script>
+		let s1 = new Student("홍길동","컴공",1);
+		let s2 = new Student("가가가","조경",2);
+
+		document.write("<h3>이름 : "+s1.name+"</h3>");
+		document.write("<h3>이름 : "+s2.name+"</h3>");
+		
+
+	</script>
+</body>
+</html>
+```
