--- a/4월 2주차/4월 13일.MD
+++ b/4월 2주차/4월 13일.MD
@@ -40,7 +40,28 @@ String 객체
 ## 포트폴리오 페이지 작성 매일하기
 
 
-### JS function에서 thsi를 생략하면 전역변수로 사용가능
+## 이론들
+```html
+<!-- 
+	프로토타입방식
+		. 생성자함수를 작성한다.
+
+	JSON(JavaScript Object Notation)표기법
+		- 데이터를 저장하거나 전송할때 사용되는 경량 DATA교환형식이다.
+		- 객체가 아니라 데이터포맷일 뿐이다.
+		- 특정 통신방법도 프로그램 문법도 나닌,, 단순히 데이터를 표시하는 방법이다.
+		- 특징
+			. 서버와 클라이언트간의 데이터 전송시에 많이 사용된다.
+			. 자바스크립트 객체생성 표기법과 매우 유사하다. >> 키:값 구성된다.
+			. JSON데이터는 자바스크립트 JSON객체의 parse()함수를 이용하여
+				자바스크립트의 Object객체로 변환해서 사용가능하다.
+			
+ -->
+```
+
+
+
+### JS function에서 this를 생략하면 전역변수로 사용가능
 ```HTML
 <!DOCTYPE html>
 <html>
