--- a/4월 2주차/4월 13일.MD
+++ b/4월 2주차/4월 13일.MD
@@ -57,6 +57,32 @@ String 객체
 				자바스크립트의 Object객체로 변환해서 사용가능하다.
 			
  -->
+
+<!-- 
+	1. 브라우저 속에는..
+		. 코어객체	: String, Math, Array, Date, 사용자객체
+		. HTML DOM객체 : 태그들  --- > 1:1의 객체를 갖는다.
+		. BOM객체	: document, navigator, history, location, screen
+
+		*
+				window
+				  |
+		----------------------------------
+		navigator	document	history		location
+				  |
+			---------------------------
+			head				body
+			|				 |
+		---------			------------------
+		meta   title		p			form
+					|			|
+					span		--------------
+							input input hr
+								  *
+								target
+ -->
+
+
 ```
 
 
