--- a/4월 2주차/4월 13일.MD
+++ b/4월 2주차/4월 13일.MD
@@ -72,15 +72,124 @@ String 객체
 				  |
 			---------------------------
 			head				body
-			|				 |
+			|					  |
 		---------			------------------
-		meta   title		p			form
-					|			|
-					span		--------------
-							input input hr
-								  *
-								target
- -->
+		meta   title		p			form(부모)
+							|			|
+							span	--------------
+									input input hr
+									  *
+									target
+
+		(previousElementSibling)	< p >	(nextElementSibling)
+
+		. 부모객체 : parentElement
+		. 직계자식 : children
+		. 첫번째 직계자식 : firstElementChild
+		. 마지막 작계자식 : lastElementChild
+		. 왼쪽사촌 : previousElementSibling
+		. 오른쪽사촌 : nextElementSibling
+
+		. DOM객체의 구성(모든 태그는 이러한 객체구조이다)
+				- 프로퍼티	: id , tagName, innerHTML, style...
+				- 메서드	: focus(), setAttribute(), click()...
+				- 컬렉션	: children
+				- 이벤트	: onclick , onkeydown, onload...
+
+				* style객체 : color, border,,,,,
+		
+		. document.write(h3.tegName)
+		. document.write(h3.id)
+		. document.write(h3.innerHTML)
+		. document.write(h3.style.color = "blue")
+
+		스타일
+		h3.style.color
+		h3.getPropertValue("color") // 동적으로 style적용했을때 읽지 못하는 수가 있다.
+
+		. 태그(DOM객체)
+			- document.getElementById("id");
+			- document.getElementsTagName("p"); >> 배열식
+			- document.getElementsClassName("class") >> 배열식
+
+	1. HTML DOM객체
+			구	분		프로퍼티		설	명		r/w
+			----------------------------------------
+			속성			id			태그의 id		r/w
+						lang		태그의 lang	r/w
+						title		태그의 title	r/w
+						tagName		태그이름		r
+						innerHTML	시작과 종료태그사이의 HTML텍스트 r/w
+						style		style객체에 대한 주소(레퍼런스) r/w
+			----------------------------------------
+			DOM트리관련		chillElementCount	자식DOM객체개수	r
+			속성			firstElementChild	첫번째 자식객체	r
+						lastElementChild	마지막 자식객체	r
+						nextelementSibling	다음 형제		r
+						parentElementSibling 이전형제		r
+			----------------------------------------
+			위치와 크기속성	offsetHeight 패딩, 테두리, 스크롤바를 포함하는 높이 	r
+						offsetWidth			""			       너비 	r
+						offsetLeft	객체의 출력위치, 수평옵셋			 	r
+						offsetTop	객체의 출력위치, 수직옵셋				r
+			----------------------------------------
+			컬렉션			children	자식DOM객체들의 컬렉션(배열)	r
+			******************************************************
+			메서드			addEventListener()	새로운 이벤트 리스너 등록
+						removeEventListener add-리스너로 등록한 이벤트리스너제거
+
+						click()				사용자가 마우스를 클릭한 것과 동일한 작업
+						focus()				키 입력을 받을 수 있도록 이 객체에 포커스지정
+
+						setAttribute()		속성추가
+						getAttribute()		속성 알아내기
+
+						appendChild()		마지막 자식 뒤에 새로운 자식 추가
+						insertBefore()		지정된 자식 앞에 새로운 자식 추가						
+						removeChild()		자식삭제
+						replaceChild()		자식대체
+
+						querySelector()		지정된 셀렉터와 일치하는 첫번째 자식
+
+	2. document 객체
+		구	분		프로퍼티		설	명		r/w
+		----------------------------------------
+		 속성			location	현재 문서의 URL 정보를 가진 location객체주소
+					domain		서버의 도메인 이름
+					cookie		쿠키에 대한 레퍼런스
+					lastModified 문서의 마지막 수정시간(년,월,일,시,분,초)
+					----------------------------------------
+					title		문서의 제목<title>
+					body		body객체에 대한 레퍼런스
+					head		head객체에 대한 레퍼런스
+					----------------------------------------
+					activeElement 문서 내에서 포커스를 받는 자식객체
+					documentElement html객체에 대한 레퍼런스
+					URL				현재 문서의 URL
+					----------------------------------------
+					images			문서내의 모든 <img>객체들의 컬렉션
+					links			문서내의 모든 href속성을 가진 객체들의 컬렉션<a>
+					forms			문서내의 모든 <form>객체들의 컬렉션
+					----------------------------------------
+					***********************************************
+					getElementById()   주어진 태그이름을 가진 모든 태그(DOM)의 컬렉션리턴
+					getElementsClassName()	모든 태그(DOM)의 주어진class속성을 가진 모든 태그의 컬렉션리턴
+					getElementsTagName()	주어진 태그이름을 가진 태그들의 컬렉션 리턴
+					getElementsByName()		주어진 Name을 가진 태그들의 컬렉션 리턴
+					----------------------------------------
+					addEventListener()		document객체에 이벤트리스너 등록
+					removeEventListener()	이벤트 리스너 제거
+					----------------------------------------
+					createElement()			HTML태그의 동적생성
+					----------------------------------------
+					open()					document에 담긴 콘텐츠를 모두 지우고
+											새로운 HTML컨텐츠를 쓸 수 있도록 연다.
+
+					close()					HTML컨텐츠를 출력하고나서 더이상 쓰기를 받지않음
+					----------------------------------------
+					write() / writeln()
+
+	-->
 
 
 ```
