--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -1,40 +1,59 @@
 # Review
-배열
-- 생성 : new Array(),
-- new Array(d,d,d,d,,,)
-- [d,d,d,d]
-- arr[이름] = 값 (연관배열) --Form값 읽어오기
+객체생성방법
+- let변수 = new Object();
+- 리터럴표기법으로 생성 ( let변수 = { 키 : "문자열", 키:정수, 키:배열, 키:객체,,,,} )
+- 프로퍼티 생성자함수 ( function A(a,b) { this.a = a; this.b = b; this.c = function() {this.a , this.b } )
 
-메소드
-- contact(arr),join("/"),sort(),reverse()
-- toString(), pop(), push(), shift(), unshift()
+HTML DOM객체
+- 모든 HTML태그는 DOM객체를 갖는다.
+- 브라우저는 HTML을 읽어서 DOM 트리를 실행과 동시에 만든다.
+- 동적제어를 하기 위해서는 DOM객체를 가져와야 한다.
 
-Date
-- 생성 : new Date()
-- 메서드 : getFullYear(), getMonth(), getDate(), getDay(), getHours(), etMinutes(), getSeconds(), getTimes()
-- *set~~~()
 
-Math
-- Math.random(), ceil(), floor(), round(),,,
-
-Number
-- toString() -- padStart()/padEnd(), toFixed, parseInt(), parseFloat()
-
-***객체생성방법***
-- ***let 변수 = new Object();***
-- 변수.속성 = "값";            - 속성(프로퍼티)
-- 변수.속성 = "값";
-- 변수.속성 = 함수명;            - 메서드
-- 변수.속성 = function(){  }
-
-- ***리터럴 표기법으로 생성***
-- let 변수 = { 키:값, 키:값, 키:값,,, }
-
-String 객체
 -----------------------------------------------------------------------------------------------
 
 # JS 시작
 
 ## 오늘의 학습목표
-- JS
+- HTML DOM객체를 이해하고 변경할 수 있다.
+- Event를 이해하고 적용할 수 있다.
+
 ## 포트폴리오 페이지 작성 매일하기
+- 6~7교시 : 학습내용 실습 + 포트폴리오 작업
+
+```
+1. DOM객체선택
+  . obj  = document.getElementById('id);
+  . obj  = document.getElementsByTagName('tag')
+  . obj  = document.getElements~
+  . obj  = document.getElementsByTagName('tag')
+  . obj  = document.getElementsByClassName('cl')
+  . obj  = document.getElementsByName('name')
+  . obj  = documents.querySelector('ul>li:list~')
+                    .querySelectorAll() - 컬렉션
+  .
+  
+2. 스타일 읽기
+  . HTML에 설정 : obj.style.backgroundColor;
+  . 셀렉터로 설정된 스타일 :
+        style = window.getComputedStyle(셀렉터);
+        value = style.getPropertyValue('color');
+        
+3. 스타일 설정
+  . obj.style.backgroundColor = 'green|#0000ff|rgb()'
+  . obj.style.cssText = "background-color:green'
+  . document.body.backgroundColor = 'green'
+  
+4. DOM객체생성
+  . newTag = document.creatElement('p');
+  . newTag.setAttribute(속성, 값)
+  . newTag.innerHTML = "<p>오늘은 금요일 입니다</p>"
+  
+5. DOM객체추가
+  . 부모.appendChild(newTag),
+  . 부모.insertBefore(기준자식)
+  
+6. DOM객체제거
+  . 부모.removeChild(떼내고자하는자식)
+  . 부모.replaceChild(교체하고자하는자식)
+```
