--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -57,3 +57,69 @@ HTML DOM객체
   . 부모.removeChild(떼내고자하는자식)
   . 부모.replaceChild(교체하고자하는자식)
 ```
+
+### DOM 트리이용 html에 직접 만든 스타일은 가져오지만 css로 가져온건 안나온다 이걸 해결하기위해서는 window 사용
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	span{font-weight: 900}
+
+</style>
+</head>
+<body>
+	<p id="first">자바스크립트가 제일 재밋어요</p>
+	<p id="second">안녕하세요<span id="third" style='color: pink;'>자바스크립트</span>입니다.</p>
+
+	<script>
+		//기본
+		let p1 = document.getElementById('first');
+		p1.style.color = 'red';
+		p1.style.backgroundColor = 'yellow';
+
+		document.getElementById('second').style.color = 'blue';
+
+		let p2 = document.getElementById('second');
+		p2.style.cssText = "background-color:green";
+
+		// 읽기
+		let span = document.getElementById("third");
+		let color = span.style.color;
+		let fontWeight = span.style.fontWeight;
+		document.write("span태그의 color:"+color+"<br>");
+		document.write("span태그의 fontWeight"+fontWeight+"<br>");
+
+		let style = window.getComputedStyle(span);
+		let value = style.getPropertyValue('font-weight');
+
+		document.write(value);
+
+	</script>
+</body>
+</html>
+```
+
+### this 이용
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function change(obj, size, color) {
+		obj.style.color=color;
+		obj.style.fontSize = size;
+	}
+</script>
+</head>
+<body>
+	<button onclick="change(this, '30px', 'red')">RED</button>
+	<button onclick="change(this, '30px', 'blue')">BLUE</button>
+	<button onclick="change(this, '30px', 'orange')">ORANGE</button>
+</body>
+</html>
+```
