--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -123,3 +123,153 @@ HTML DOM객체
 </body>
 </html>
 ```
+
+
+### 주말에 해보기
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function f(){
+
+		// querySelector(css선택자)
+
+		// ul id=a를 가져와서 그 태그의 이름을 소문자로 출력한다.
+		// let tag = document.querySelector("ul#a");
+		// document.write("<p>"+ tag.tagName +"</p>")
+
+		// section 자손의 모든 li를 가져와서 출력한다.
+		let tags = document.querySelectorAll("section li");
+		for (let i = 0; i < tags.length; i++) {
+  		document.write("<p>" + tags[i].tagName + ": " + tags[i].id + "</p>");
+		}
+
+
+
+		// id가 a인 자손 ui들의 id를 모두 출력한다.
+
+
+		// id가 c인 객체의 바로 인접한 ul의 id를 출력한다.(바로 옆동생만)
+		
+
+		// id가 a에 바로 인접한 h1태그의 id출력
+		// id가 a에 인접한 것들의 id출력
+		// id가 a인 자식들중 ul들의 id출력
+
+	}
+</script>
+</head>
+<body>
+	<section>
+		<p id="h"></p>
+		
+		<ul id="a">
+			<li id="e">
+				<ul id="b">
+					<li id="i"></li>
+					<li id="j"></li>
+				</ul>
+			</li>
+			<li id="f"></li>
+			<li id="k"></li>
+			<li id="l"></li>
+		</ul>
+		<h1 id="c"></h1>
+		<ul id="d"></ul>
+		<ul id="g"></ul>
+		<h1 id="m"></h1>
+		
+	</section>
+
+</body>
+</html>
+```
+
+
+### 쇼핑몰을 만들때 유용한 코드
+- 이 코드는 읽어보
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	let checked_items = [];
+	
+	function f(){
+		let tags = document.getElementsByName("chk_interest");
+		// tags[1].setAttribute("checked","check");
+		// tags[1].setAttribute("value","enjoy");
+
+		for(i=0;i<tags.length;i++){
+			if(tags[i].checked){
+				checked_items.push(tags[i]);
+			}
+		}
+		select();
+	}
+	function select(){
+		let result = document.getElementById('selected');
+		let items = "<h3>당신이 선택한 관심품목은 <span style='color:blue'>";
+			
+		for(i=0;i<checked_items.length;i++) {
+			if(i == checked_items.length-1){
+				items += checked_items[i].getAttribute('value');
+			} else {
+				items += checked_items[i].getAttribute('value')+",";
+			}
+		}
+
+		result.innerHTML = items+"</span>입니다.</h3>"
+	}
+
+
+	function setImg(obj){
+		obj.setAttribute("src","./image/cat7.jpg");
+		obj.setAttribute("width","200");
+      	obj.setAttribute("height","200");
+
+	}
+
+
+</script>
+</head>
+<body>
+	<h3>관심품목을 선택합니다.</h3>
+
+	<label>
+		<input type="checkbox" name="chk_interst" value='it'>
+			IT/컴퓨터<br>
+	</label>
+
+	
+	<input id="t" type="checkbox" name="chk_interst" value='entertainment'>
+	<label for="t">엔터테인먼트</label><br>
+
+	<label>
+		<input type="checkbox" name="chk_interest" value="shopping">쇼핑<br>
+	</label>
+	
+	<label>
+		<input type="checkbox" name="chk_interest" value="sports">스포츠<br>
+	</label>
+
+	<label>
+		<input type="checkbox" name="chk_interest" value="book">도서/책<br>
+	</label>
+
+	<h3 onclick="f()" style="cursor: pointer;text-decoration: underline;">선택완료</h3>
+	
+	<h3 id="selected" onclick='select()'></h3>
+	
+	<img id="img" src="./image/cat3.jpg" 
+		width="200px" height="200px" onclick="setImg(this)">
+
+	
+</body>
+</html>
+```
