--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -58,6 +58,29 @@ HTML DOM객체
   . 부모.replaceChild(교체하고자하는자식)
 ```
 
+## 이론
+```htmlz
+<!-- 
+	브라우저는	1) HTML문서를 로드하기전에 document 빈 객체를 생성한다.
+			2) HTML문서를 위에서 아래로 해석하면서 HTML태그들을 document에 담는다.
+			3) DOM트리를 구성한다.
+			4) </html>를 만나면 document객체를 완성하고 닫는다.
+			
+	document.write()
+			- 현재 document객체에 담긴 내용의 끝에 HTML텍스트를 추가하는 코드이다.
+			- 추가되는 HTML텍스트는 DOM객체로 바뀌고 DOM트리에 추가된다.
+			- 그 결과로 삽입된 HTML텍스트가 브라우저 화면에 출력되는 것이다.
+			* document가 닫히기 전까지만 실행된다.
+
+	document.open()
+			- 기존 내용을 모두 지우고 document객체를 새롭게 연다.
+			- 새로운 HTML텍스트를 받아들일 준비를 한다.
+
+	document.close()
+			- HTML텍스트를 모두 쓴 후에는 닫기로 처리한다.
+ -->
+```
+
 ### DOM 트리이용 html에 직접 만든 스타일은 가져오지만 css로 가져온건 안나온다 이걸 해결하기위해서는 window 사용
 ```html
 <!DOCTYPE html>
