--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -296,3 +296,51 @@ HTML DOM객체
 </body>
 </html>
 ```
+
+
+### 아래에 노란색 배경이 안뜸 오류
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	// 왜 안돼...
+
+	function creatDIV(){
+		// 부모
+		let obj = document.getElementById('parent');
+
+		// 객체를 준비
+		let newDiv = document.createElement('div');
+		newDiv.innerHTML = "새로 생성된 DIV입니다."
+		newDiv.setAttribute("id","myDiv")
+		newDiv.style.backgroundColor = "yellow";
+		newDiv.style.fontSize = "20px";
+		newDiv.style.fontWeight = "border";
+		// 이벤트리스너 부착
+		newDiv.addEventListener("click",
+			function(){
+				let element = this.parentElement;
+				element.removeChild(this);
+			}
+		);
+		
+		// 추가
+		obj.appendChild(newDiv);
+	}
+</script>
+</head>
+<body id="parent">
+	<h3>DIV객체를 동적으로 생성, 추가, 삭제해보기</h3>
+	<hr>
+	<p>DOM트리에 동적으로 객체를 삽입할 수 있습니다.
+		creatElement(), appendChild(), removeChild()
+		메서드를 이용해서 새로운 객체를 생성, 추가, 삭제할 수 있습니다.
+	</p>
+	<a href="javascript:createDIV()">DIV생성</a>
+</body>
+</html>
+```
