--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -344,3 +344,69 @@ HTML DOM객체
 </body>
 </html>
 ```
+
+
+### js 동적 추가를 슬슬 알게된 코드
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+</script>
+</head>
+<body>
+	추천여행지: &nbsp;<input id="t1" type="text">
+	<button type="button" onclick="listPlace1()">국내</button>
+	<button type="button" onclick="listPlace2()">해외</button>
+
+	<div id="d1">
+		<div>1.국내여행지</div>
+		<div id="d2">2.해외여행지</div>
+	</div>
+
+	<script>
+		// 국내
+		function listPlace1(){
+			let tag1 = document.getElementById('t1'); // input
+			let tag2 = document.getElementById('d1'); // 부모div
+			let tag3 = document.getElementById('d2'); // 자식div
+
+			// 새로운 태그
+			let newTag = document.createElement('div');
+
+			// 새로운 태그(DOM객체)
+			let txtNode = document.createTextNode(tag1.value);
+
+			newTag.appendChild(txtNode);
+			//-------------------------------------
+
+			tag2.insertBefore(newTag,tag3); // insertBefore(신규태그,기준위치)
+			// 부모.insertBefore(신규태그, 기준위치)
+
+			tag1.value="";
+		}
+
+		// 해외
+		function listPlace2(){
+			let tag1 = document.getElementById('t1');
+			let tag2 = document.getElementById('d1'); // 부모div
+			let tag3 = document.getElementById('d2'); // 자식div
+
+			let newTag = document.createElement('div');
+
+			let txtNode = document.createTextNode(tag1.value);
+
+			newTag.appendChild(txtNode);
+
+			tag2.appendChild(newTag);
+			tag1.value="";
+
+		}
+	</script>
+
+</body>
+</html>
+```
