--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -147,6 +147,117 @@ HTML DOM객체
 </html>
 ```
 
+# 국내 해외여행 DOM 동적구현
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+</script>
+</head>
+<body>
+	추천여행지: &nbsp;<input id="t1" type="text">
+	<button type="button" onclick="listPlace1()">국내</button>
+	<button type="button" onclick="listPlace2()">해외</button>
+
+	<div id="d1">
+		<div>1.국내여행지</div>
+		<div id="d2">2.해외여행지</div>
+	</div>
+
+	<script>
+		// 국내
+		function listPlace1(){
+			let tag1 = document.getElementById('t1'); // input
+			let tag2 = document.getElementById('d1'); // 부모div
+			let tag3 = document.getElementById('d2'); // 자식div
+
+			// 새로운 태그
+			let newTag = document.createElement('div');
+
+			// 새로운 태그(DOM객체)
+			let txtNode = document.createTextNode(tag1.value);
+
+			newTag.appendChild(txtNode);
+			//-------------------------------------
+
+			tag2.insertBefore(newTag,tag3); // insertBefore(신규태그,기준위치)
+			// 부모.insertBefore(신규태그, 기준위치)
+
+			tag1.value="";
+		}
+
+		// 해외
+		function listPlace2(){
+			let tag1 = document.getElementById('t1');
+			let tag2 = document.getElementById('d1'); // 부모div
+			let tag3 = document.getElementById('d2'); // 자식div
+
+			let newTag = document.createElement('div');
+
+			let txtNode = document.createTextNode(tag1.value);
+
+			newTag.appendChild(txtNode);
+
+			tag2.appendChild(newTag);
+			tag1.value="";
+
+		}
+	</script>
+
+</body>
+</html>
+```
+
+# 고양이 삭제 교체
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<div id="p1">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60" id="w1">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60" id="w2">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60">
+	</div>
+	<hr>
+	<button type="text" onclick="del()">두번째이미지삭제</button>
+	<button type="text" onclick="replace()">네번째 이미지 교체</button>
+
+	<script>
+		function del() {
+			let deltedTag = document.getElementById('w1');
+			deltedTag.remove();
+		}
+
+		function replace() {
+			let newTage = document.createElement('img');
+			newTage.setAttribute('src','./image/cat3.jpg');
+			newTage.setAttribute('width','60px');
+			newTage.setAttribute('height','60px');
+			
+			let oldTag = document.getElementById('w2')
+			let parent = oldTag.parentElement;
+			parent.replaceChild(newTage,oldTag);
+		}
+
+	</script>
+
+</body>
+</html>
+```
+
+------------------------------------------------------------------------------------------
 
 ### 주말에 해보기
 ```html
