--- a/4월 2주차/4월 14일.MD
+++ b/4월 2주차/4월 14일.MD
@@ -521,3 +521,272 @@ HTML DOM객체
 </body>
 </html>
 ```
+
+# 진행상태
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	#rangeProgress{
+		width: 100%;
+		height: 30%;
+		position: relative;
+		background: darkgray;
+	}
+
+	#bar{
+		background: red;
+		width: 0px;
+		height: 30px;
+		position: absolute;
+	}
+
+</style>
+</head>
+<body>
+	진행상태 : <span id="demo">%</span>
+	<div id="rangeProgress">
+		<div id="bar">
+		
+		</div>
+
+	<button type="button" onclick="move()">진행</button>
+
+	<script>
+		function move() {
+			let progressBar = document.getElementById('bar');
+
+			let demo = document.getElementById('demo');
+
+			let width = 0;
+
+			let id = setInterval(function(){
+				if(width===100){
+					clearInterval(id); // 중지
+				} else {
+					width++;
+					progressBar.style.width = width+'%';
+					demo.innerHTML = width+'%';
+				}
+			},10);
+
+		}
+	</script>
+</body>
+</html>
+```
+
+### 디지털시계
+```html
+<!DOCTYPE html>
+<!-- 
+	- window setInterval(호출함수,시간)	: 주기적인 반복 : 주기적인 반복
+		.clearInterval
+	- setInterval					: 단발적인 시간지연
+		.clearTimeOut()
+
+
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	let inter=500;
+	function changeTime(){
+
+		let tag = document.getElementById('t1');
+
+		let now = new Date();
+		let h = now.getHours();
+		let m = now.getMinutes();
+		let s = now.getSeconds();
+
+		if(h>12) {
+			txt = "PM";
+			h=h-12;
+		}else{
+			txt = "AM";
+		}
+		tag.innerHTML = txt+" "+h+":"+m+":"+s+" ";
+
+	}
+
+</script>
+<style>
+	div{
+		width: 250px;
+		height: 250px;
+		background: skyblue;
+		text-align: center;
+		border-radius: 50%;
+		display: inline-block;
+	}
+
+	#t1{
+		margin: 40% auto;
+		background: white;
+	}
+
+</style>
+</head>
+<body>
+	<h3>디지털시계</h3>
+	<div>
+		<h1 id="t1"></h1>
+	</div>
+	<script>
+		window.setInterval(changeTime().inter);
+	</script>
+</body>
+</html>
+```
+
+### 2번쨰이미지 삭제, 4번쨰 이미지 대체
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<div id="p1">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60" id="w1">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60" id="w2">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60">
+		<img src="./image/cat2.jpg" width="60" height="60">
+	</div>
+	<hr>
+	<button type="text" onclick="del()">두번째이미지삭제</button>
+	<button type="text" onclick="replace()">네번째 이미지 교체</button>
+
+	<script>
+		function del() {
+			let deltedTag = document.getElementById('w1');
+			deltedTag.remove();
+		}
+
+		function replace() {
+			let newTage = document.createElement('img');
+			newTage.setAttribute('src','./image/cat3.jpg');
+			newTage.setAttribute('width','60px');
+			newTage.setAttribute('height','60px');
+			
+			let oldTag = document.getElementById('w2')
+			let parent = oldTag.parentElement;
+			parent.replaceChild(newTage,oldTag);
+		}
+
+	</script>
+
+</body>
+</html>
+```
+
+### 국내, 해외 여행지
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+</script>
+</head>
+<body>
+	추천여행지: &nbsp;<input id="t1" type="text">
+	<button type="button" onclick="listPlace1()">국내</button>
+	<button type="button" onclick="listPlace2()">해외</button>
+
+	<div id="d1">
+		<div>1.국내여행지</div>
+		<div id="d2">2.해외여행지</div>
+	</div>
+
+	<script>
+		// 국내
+		function listPlace1(){
+			let tag1 = document.getElementById('t1'); // input
+			let tag2 = document.getElementById('d1'); // 부모div
+			let tag3 = document.getElementById('d2'); // 자식div
+
+			// 새로운 태그
+			let newTag = document.createElement('div');
+
+			// 새로운 태그(DOM객체)
+			let txtNode = document.createTextNode(tag1.value);
+
+			newTag.appendChild(txtNode);
+			//-------------------------------------
+
+			tag2.insertBefore(newTag,tag3); // insertBefore(신규태그,기준위치)
+			// 부모.insertBefore(신규태그, 기준위치)
+
+			tag1.value="";
+		}
+
+		// 해외
+		function listPlace2(){
+			let tag1 = document.getElementById('t1');
+			let tag2 = document.getElementById('d1'); // 부모div
+			let tag3 = document.getElementById('d2'); // 자식div
+
+			let newTag = document.createElement('div');
+
+			let txtNode = document.createTextNode(tag1.value);
+
+			newTag.appendChild(txtNode);
+
+			tag2.appendChild(newTag);
+			tag1.value="";
+
+		}
+	</script>
+
+</body>
+</html>
+```
+
+### 여행가고 싶은지역
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	function listPlace() {
+		let addValue = document.getElementById('t1').value;
+
+		const li = document.createElement("li")
+	
+		li.setAttribute("id",addValue);
+
+		const textNode = document.createTextNode(addValue);
+		li.appendChild(textNode);
+
+		document.getElementById('t2').appendChild(li);
+		document.getElementById('t1').value = '';
+	}
+
+
+</script>
+</head>
+<body>
+	여행하고싶은 지역<input id="t1" type="text">
+	<button type="button" onclick="listPlace()">추가</button>
+	<ul id="t2"></ul>
+
+</body>
+</html>
+```
