--- a/성수만/성수만.MD
+++ b/성수만/성수만.MD
@@ -304,3 +304,370 @@
 </body>
 </html>
 ```
+
+# 수정 성수만
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Full Screen Div</title>
+    <link rel="stylesheet" href="normalize.css">
+    <style>
+
+        *{
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+
+        body {
+            margin: 0 0;
+            
+            
+        }
+
+        #container {
+            width: 100vw;
+            height: 120px;
+            min-width: 1300px;
+            background-size: cover;
+
+        }
+
+        
+
+        #header {
+            width: 80vw;
+            height: 100px;
+            margin: 0 auto;
+            margin-top: 20px;
+            min-width: 1200px;
+
+        }
+
+        
+        
+
+        #header>#headerLeft{
+            float: left;
+            display: flex;
+        }
+
+        #header>#headerLeft>.banner {
+            margin-top: 55px;
+            font-size: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: burlywood;
+            overflow: hidden;
+
+        }
+
+        .banner {
+            font-size: 10em;
+            color: #fff;
+            text-transform: uppercase;
+            text-align: center;
+            display: flex;
+        }
+
+        .banner>span {
+            transition: 1.5s;
+            animation: anime_textup 1.5s infinite;
+        }
+
+        @keyframes anime_textup {
+        0% { top: 0; }
+        10% { top: -0.3rem; }
+        20% { top: 0.2rem; }
+        30% { top: -0.1rem; }
+        40% { top: 0.1rem; }
+        50% { top: -0.05rem; }
+        60% { top: 0.05rem; }
+        70% { top: -0.02rem; }
+        80% { top: 0.02rem; }
+        90% { top: -0.01rem; }
+        100% { top: 0; }
+    }
+
+    .banner span {
+        position: relative;
+        animation: anime_textup 2s infinite;
+    }
+
+    .banner span:nth-of-type(1) {
+        animation-delay: 0.15s;
+    }
+
+    .banner span:nth-of-type(2) {
+        animation-delay: 0.3s;
+    }
+
+    .banner span:nth-of-type(3) {
+        animation-delay: 0.45s;
+    }
+
+    .banner span:nth-of-type(4) {
+        animation-delay: 0.6s;
+    }
+
+    .banner span:nth-of-type(5) {
+        animation-delay: 0.75s;
+    }
+
+    .banner span:nth-of-type(6) {
+        animation-delay: 0.9s;
+    }
+
+    .banner span:nth-of-type(7) {
+        animation-delay: 1.05s;
+    }
+
+    .banner span:nth-of-type(8) {
+        animation-delay: 1.2s;
+    }
+
+    .banner span:nth-of-type(9) {
+        animation-delay: 1.35s;
+    }
+
+    .banner span:nth-of-type(10) {
+        animation-delay: 1.5s;
+    }
+
+     #header>#headerLeft>.searchBox {
+       margin-top: 55px;   
+          margin-left: 20px;
+        
+     }
+
+        .searchInput {
+            width: 30vw;
+            height: 30px;
+            min-width: 500px;
+        }
+
+        .searchButton {
+            height: 30px;
+        }
+
+
+        #header>#headerRight{
+            width: 350px;
+            float: right;
+            margin-top: 50px;
+        }
+
+        #header>#headerRight>div{
+        }
+
+        #고객마당{
+            float: left;
+            margin-top: 10px;
+            display : inline-block;
+            width: 120px;
+            font-size: 20px;
+            font-weight: bolder;
+        }
+
+
+        #고객마당>.dropdown {
+            width: 120px;
+            display : none;
+            font-size: 18px;
+        }
+
+        #고객마당>.dropdown a{
+            margin: 0 auto;
+            display: block;
+            text-decoration: none;
+            color: black;
+        }
+
+        #고객마당>.dropdown a:hover {
+            color: burlywood;
+        }
+
+        #고객마당:hover .dropdown {
+            display: block;
+        }
+
+        #점포등록 {
+            float: left;
+            margin-top: 10px;
+            width: 120px;
+            font-size: 20px;
+            font-weight: bolder;
+        }
+
+        #점포등록>a {
+            margin: 0 auto;
+            text-decoration: none;
+            color: black;
+        }
+
+        #점포등록>a:hover {
+            color: burlywood;
+        }
+
+        #로그인 {
+            float: left;
+            margin-top: 13px;
+            width: 50px;
+            font-size: 15px;
+            font-weight: bolder;
+        }
+
+        #로그인>a {
+            text-decoration: none;
+            color: black;
+        }
+
+        #로그인>a:hover {
+            color: burlywood;
+            transform: scale(1.5);
+        }
+
+
+
+
+ 
+        /* container2 */
+
+        #container2{
+            width: 100vw;
+            height: 500px;
+            background-image: linear-gradient(to bottom, 
+                rgba(222, 184, 135, 1 ), 
+                rgba(255, 255, 255, 0.5) 12%, 
+                rgba(255, 255, 255, 0.5) 50%, 
+                rgba(255, 255, 255, 0.5) 83%, 
+                rgba(222, 184, 135, 1)
+            );
+            min-width: 1300px;
+            background-size: cover;
+            margin-top: 30px;
+        }
+
+        #container2>div {
+            margin: 0 auto;
+            margin-top: -30px;
+            width: 80vw;
+            min-width: 1300px;
+            height: 350px;
+        }
+
+        #container2>h1 {
+            text-align: center;
+        }
+
+        #container2 ul {
+            display: flex;
+        }
+
+        #container2 ul>li {
+            margin: 0 auto;
+            margin-top: 20px;
+            list-style: none;
+            width: 400px;
+            height: 300px;
+            background-color: lightcoral;
+        }
+
+        #container2 ul>#grade1fi {
+            margin-top: -20px;
+        }
+
+        #container2 ul>#grade2se {
+            margin-top: 30px;
+        }
+
+        #container2 ul>#grade3th {
+            margin-top: 30px;
+        }
+
+        
+        /* container3 */
+        
+        #container3{
+            margin: 0 auto;
+            margin-top: 30px;
+            width: 80vw;
+            min-width: 1300px;
+            height: 500px;
+            background-color: lightgray;
+        }
+
+        
+    </style>
+</head>
+<body>
+    
+    <div id="container">
+        <div id="header">
+
+            <div id="headerLeft">
+                <div class="banner">
+                    <span>S</span>
+                    <span>ᴇ</span>
+                    <span>ᴏ</span>
+                    <span>ɴ</span>
+                    <span>ɢ</span>
+                    <span>s</span>
+                    <span>ᴜ</span>
+                    <span>ᴍ</span>
+                    <span>ᴀ</span>
+                    <span class="scale-down">ɴ</span>
+                </div>
+                <div class="searchBox">
+
+                    <input class="searchInput"type="text" name="" placeholder="Search">
+
+                    <button class="searchButton" href="#">
+                        <i class="material-icons">
+                            검색
+                        </i>
+                    </button>
+
+                </div>
+        
+            </div>
+            <div id="headerRight">
+                <div>
+                    <div id="고객마당">고객마당
+                        <div class="dropdown">
+                            <a href="#">⦁ 자유게시판</a>
+                            <a href="#">⦁  폐업신고</a>
+                        </div>
+                    </div>
+                    <div id="점포등록"><a href="#">점포등록</a></div>
+                    <div id="로그인"><a href="./login.html">로그인</a></div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+    <!-- 1위,2위 3위 들어감, 그리고 뒤에는 블라인드 준 카페들 배경사진들 랜덤으로 출력 -->
+    <div id="container2">
+        <h1>이달의 카페</h1><br>
+        <div id="grade">
+            <ul>
+                <li id="grade2se"></li>
+                <li id="grade1fi"></li>
+                <li id="grade3th"></li>
+            </ul>
+        </div>
+    </div>
+    
+    <!-- 카페 종류들 -->
+    <div id="container3">
+        <div></div>
+    </div>
+
+
+
+</body>
+</html>
+```
