--- a/4월 2주차/4월 17일.MD
+++ b/4월 2주차/4월 17일.MD
@@ -1,15 +1,26 @@
 # Review
-객체생성방법
-- let변수 = new Object();
-- 리터럴표기법으로 생성 ( let변수 = { 키 : "문자열", 키:정수, 키:배열, 키:객체,,,,} )
-- 프로퍼티 생성자함수 ( function A(a,b) { this.a = a; this.b = b; this.c = function() {this.a , this.b } )
+DOM 객체선택
+- obj = document.getElementByid('id);
+- obj = document.getElementsByTagName('tag');
+- obj = document.getElementsByClassName('class');
+- obj = document.getElementByName('name);
 
-HTML DOM객체
-- 모든 HTML태그는 DOM객체를 갖는다.
-- 브라우저는 HTML을 읽어서 DOM 트리를 실행과 동시에 만든다.
-- 동적제어를 하기 위해서는 DOM객체를 가져와야 한다.
+#### document.querySelectorAll('ul>li:last')  // css 선택자를 사용할 수 있다. 모두 가져와짐(컬렉션타입 반환)
+#### document.querySelector('ul>li:last');  // 해당하는 첫번째만 가져와짐
 
+스타일 설정
+- obj.style.backgroundColor = 'green';
+- document.body.style.backgroundColor = '#0000ff | rgb(0,100,150))';
+- obj.style.cssText = "background-color:green"; // css 동일
+- obj.style.cssText = "background-color:green"; // css 동일
 
+스타일 읽어오기
+- 1) HTML에 설저된 값 읽기 : style = obj.style.color :
+- 2) 셀렉터로 설정된 스타일 값 읽기 : 
+~~~
+style =window.getComputedStyle(셀렉터); //  css스타일 객체 가져온다.
+value = style.getPropertyValue('color'); // 그 속에서 color값 읽어온다.
+~~~
 -----------------------------------------------------------------------------------------------
 
 # JS 시작
